--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_analytics.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_analytics.html
@@ -5,7 +5,209 @@
 <div class="pre-analytics-msg-div text-center">
     Your analytics is loading. Please wait.
 </div>
-<div class="analytics-div hide">
+<div class="course-overview-container hide">
+    <div class="row collapse course-overview">
+        <div class="columns small-12 medium-6">
+          <div class="ongoing-session">
+            <h5>ONGOING SESSION </h5>
+            <h3>Taking Screenshots of the work and doing something</h3>
+            <button class="tiny button"><i class="fa fa-sign-in"></i>&nbsp;Enter Session</button>
+          </div>
+          <div class="course-status">
+            <h5>Course status</h5>
+            <div class="row">
+              <div class="small-12 columns">
+                <span class="course-metric-heading">Module's Completion</span>
+                <h4>2 of 6 modles completed</h4>
+                <div class="progress success round">
+                    <div class="module_progress_meter meter"></div>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="small-12 columns">
+                <span class="course-metric-heading">Unit's Completion</span>
+                <h4>2 of 6 modles completed</h4>
+                <div class="progress success round">
+                    <div class="unit_progress_meter meter"></div>
+                </div>
+
+              </div>
+            </div>
+            <ul class="tabs" data-tab role="tablist">
+              <li class="tab-title active" ><a href="#course-notification" role="tab" tabindex="0" aria-selected="true" aria-controls="panel2-1">Notifications</a></li>
+              <li class="tab-title" ><a href="#course-act-logs" role="tab" tabindex="0" aria-selected="false" aria-controls="panel2-2">Activity Log</a></li>
+            </ul>
+            <div class="tabs-content">
+              <section role="tabpanel" aria-hidden="false" class="content active" id="course-notification">
+                <div class="row">
+                  <div class="small-2 columns"><i class="fa fa-comment-o"></i></div>
+                  <div class="small-10 columns">Summer daisy reported the file.</div>
+                </div>
+              </section>
+              <section role="tabpanel" aria-hidden="true" class="content" id="course-act-logs">
+                <ul>
+                  <li>Activity log 1</li>
+                  <li>Activity log 2</li>
+                </ul>
+              </section>
+            </div>
+          </div>
+        </div>
+        <div class="columns small-12 medium-6">
+          <h5>Total points gained</h5>
+          <span class="course-metric-count">167</span>
+          <div class="course-points-breakup">
+
+          </div>
+          <div class="course-interactions course-section">
+            <span class="course-section-heading">Interactions</span>
+            <span class="course-section-icon">
+              <i class="fa fa-users"></i>
+            </span>
+            <div class="row">
+              <div class="columns small-12 medium-6">
+                <span class="course-metric-heading">Comments By me</span>
+                <span class="course-metric-count">167</span>
+              </div>
+              <div class="columns small-12 medium-6">
+                <span class="course-metric-heading">Avg Rating for my comments</span>
+                <span class="course-metric-count">Star rating</span>
+              </div>
+            </div>
+            <div class="row">
+              <div class="columns small-12 medium-6">
+                <span class="course-metric-heading">Comments for me</span>
+                <span class="course-metric-count">32</span>
+              </div>
+              <div class="columns small-12 medium-6">
+                <span class="course-metric-heading">Avg Ratings to others</span>
+                <span class="course-metric-count">Star Rating</span>
+              </div>
+            </div>
+          </div>
+          <div class="course-gallery-uploads course-section">
+            <span class="course-section-heading">Gallery uploads</span>
+            <span class="course-section-icon">
+              <i class="fa fa-file-text"></i>
+            </span>
+            <div class="row">
+              <div class="columns small-12 medium-4">
+                <span class="course-metric-heading">Files Created</span>
+                <span class="course-metric-count">42</span>
+              </div>
+              <div class="columns small-12 medium-4">
+                <span class="course-metric-heading">Visits gained</span>
+                <span class="course-metric-count">62</span>
+              </div>
+              <div class="columns small-12 medium-4">
+                <span class="course-metric-heading">Comments recieved</span>
+                <span class="course-metric-count">17</span>
+              </div>
+            </div>
+            <div class="row">
+              <div class="columns small-12">
+                <span class="course-metric-heading">Avg. Rating</span>
+                <span class="course-metric-count">Star Rating</span>
+              </div>
+            </div>
+            <div class="row">
+              <div class="columns small-12 medium-4">
+                <span class="course-metric-heading">Others File Visited</span>
+                <span class="course-metric-count">29</span>
+              </div>
+              <div class="columns small-12 medium-4">
+                <span class="course-metric-heading">Comments on other files</span>
+                <span class="course-metric-count">15</span>
+              </div>
+              <div class="columns small-12 medium-4">
+                <span class="course-metric-heading">Comments by unique users</span>
+                <span class="course-metric-count">5</span>
+              </div>
+            </div>
+            <div class="row">
+              <div class="columns small-12">
+                <span class="course-metric-heading">Avg. Rating Awarded</span>
+                <span class="course-metric-count">Star Rating</span>
+              </div>
+            </div>
+          </div>
+          <div class="course-quiz-perf course-section">
+            <span class="course-section-heading">Quiz Performance</span>
+            <span class="course-section-icon">
+              <i class="fa fa-question-circle"></i>
+            </span>
+            <div class="row">
+              <div class="columns small-12 medium-6">
+                <span class="course-metric-heading">Questions Attempted</span>
+                <span class="course-metric-count">93</span>
+              </div>
+              <div class="columns small-12 medium-6">
+                <span class="course-metric-heading">Total Questions</span>
+                <span class="course-metric-count">105</span>
+              </div>
+            </div>
+            <div class="row">
+              <div class="columns small-12 medium-6">
+                <span class="course-metric-heading">Correct Answers</span>
+                <span class="course-metric-count correct-count">87</span>
+              </div>
+              <div class="columns small-12 medium-6">
+                <span class="course-metric-heading">Incorrect answers</span>
+                <span class="course-metric-count incorrect-count">6</span>
+              </div>
+            </div>
+          </div>
+          <div class="course-notes course-section">
+            <span class="course-section-heading">Note Making</span>
+            <span class="course-section-icon">
+              <i class="fa fa-book"></i>
+            </span>
+            <div class="row">
+              <div class="columns small-12 medium-6">
+                <span class="course-metric-heading">Notes Written</span>
+                <span class="course-metric-count">93</span>
+              </div>
+              <div class="columns small-12 medium-6">
+                <span class="course-metric-heading">Views Gained</span>
+                <span class="course-metric-count">105</span>
+              </div>
+            </div>
+            <div class="row">
+              <div class="columns small-12 medium-12">
+                <span class="course-metric-heading">Others notes visited</span>
+                <span class="course-metric-count">87</span>
+              </div>
+            </div>
+          </div>
+          <div class="course-warning course-section">
+              <h5>WAITING FOR YOUR FEEDBACK</h5>
+              <div><i class="fa fa-sign-in"></i><a>3 New notes added</a></div>
+              <div><i class="fa fa-file-image-o"></i><a>36 New files uploaded in the gallery</a></div>
+              <div></div>
+          </div>
+
+        </div>
+        <!--div class="about-course-heading">
+          <div class="heading-text">
+            <div>
+              <h2>{% firstof node.altnames node.name  %}</h2>
+            </div>
+            {% if next_session_in_course.1 %}
+              <div>Next Session: '{{next_session_in_course.0|default_if_none:"Data Not Available"}}' on {{next_session_in_course.1|date:"d M Y"}}</div>
+            {% endif %}
+
+            <div>
+              <span title="No. of Modules"><i class="fi-list-thumbnails"></i>&nbsp;{{group_object.collection_set|length}}</span>
+              &#8226;&nbsp;&nbsp;
+              <span title="No. of Enrolled users"><i class="fi-torso"></i>&nbsp;{{group_object.author_set|length}}</span>
+              &#8226;&nbsp;&nbsp;
+              <span title="Course Duration"><i class="fi-clock"></i>&nbsp;{{weeks_count}} weeks</span>
+            </div>
+          </div>
+        </div-->
+
+      </div>
 
     <fieldset class="modules-progress">
         <legend>
@@ -101,7 +303,7 @@
 </div>
 
 <script type="text/javascript">
-   
+
     $(document).ready(function() {
 
         $.ajax({
@@ -127,7 +329,7 @@
                             .css("font-size", "20px")
                     }
                 });
-                $(".analytics-div").removeClass("hide")
+                $(".course-overview-container").removeClass("hide")
                 $(".pre-analytics-msg-div").addClass("hide")
             },
         });//end of ajax
