--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_app_styles.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_app_styles.scss
@@ -2258,210 +2258,212 @@ $course-envelop-color: #fff;
 
   .course-book {
 
-    #course-about {
-      .course-overview >.columns {
-        padding: 0px 10px;
-      }
-      h5 {
-        text-transform: uppercase;
-      }
-      .correct-count {
-        color: #367714;
-      }
-      .incorrect-count {
-        color: #9b0000;
-      }
-      .course-metric-heading {
-        text-transform: uppercase;
-        font-size: 12px;
-        letter-spacing: 0.9px;
-        font-weight: 600;
-        color: #8E8E8E;
-        display: block;
-      }
-      .course-metric-count {
-        font-size: 30px;
-        font-weight: 500;
-        letter-spacing: 0.5px;
-        display: block;
-      }
-      .ongoing-session {
-        border-bottom: 1px solid #ccc;
-        margin-bottom: 12px;
-        padding-bottom: 15px;
+  }
+}
 
-        h5,h3 {
-          color: #2b78e4;
-        }
-        button {
-          font-size: 14px;
-          padding: 7px;
-          margin: 0px;
-          background-color: #2B78E4;
-        }
-      }
-      .course-status {
-        >h5 {
-          color: #888;
-        }
-        >.row {
-          margin: 10px 0px;
-        }
-        .tabs {
-          width: 100%;
-          margin: 0em 0em 0.5em;
-          border-bottom: 1px solid #CCC;
 
-          .tab-title {
-            width: 40%;
-            background-color: #DEDEDE;
-            margin-left: 1em;
-            position: relative;
-            top: 1px;
-            text-transform: uppercase;
+.course-overview-container {
+  .course-overview >.columns {
+    padding: 0px 10px;
+  }
+  h5 {
+    text-transform: uppercase;
+  }
+  .correct-count {
+    color: #367714;
+  }
+  .incorrect-count {
+    color: #9b0000;
+  }
+  .course-metric-heading {
+    text-transform: uppercase;
+    font-size: 12px;
+    letter-spacing: 0.9px;
+    font-weight: 600;
+    color: #8E8E8E;
+    display: block;
+  }
+  .course-metric-count {
+    font-size: 30px;
+    font-weight: 500;
+    letter-spacing: 0.5px;
+    display: block;
+  }
+  .ongoing-session {
+    border-bottom: 1px solid #ccc;
+    margin-bottom: 12px;
+    padding-bottom: 15px;
 
-            &.active {
-              background-color: #fff;
-              border: 1px solid #CCC;
-              border-bottom: 0px;
-            }
-          }
-        }
-      }
-      .course-section {
-        border: 1px solid #ccc;
-        padding: 10px;
-        box-shadow: 1px 1px 1px rgba(0, 0, 0,0.5);
-        margin: 40px 0px;
-        position: relative;
-
-        >.row {
-          margin: 20px 0px;
-        }
-
-        .course-section-heading {
-          text-transform: uppercase;
-          font-weight: 600;
-          letter-spacing: 1.5px;
-          font-size: 14px;
-          display: block;
-          margin: 2px 0px 15px;
-          color: #888;
-        }
-
-        .course-section-icon {
-          position: absolute;
-          font-size: 40px;
-          top: -35px;
-          right: 5px;
-          color: #aaa;
-          background: #fff;
-        }
-      }
-      .course-points-breakup {
-
-      }
-      .course-interactions {
-
-      }
-      .course-gallery-uploads {
-
-      }
-      .course-quiz-perf {
-
-      }
-      .course-notes{
-
-      }
-      .course-warning{
-        background-color: #fffdd7;
-        >h5 {
-          color: #c09100;
-        }
-        i {
-          padding: 10px;
-          margin-right: 5px;
-          color: #c09100;
-        }
-        a {
-          text-decoration: underline;
-        }
-      }
-      .course-students-data {
-        margin: 20px 0px;
-
-        .students-table-legends {
-          >span:nth-child(odd) {
-            margin: 0px 10px;
-          }
-          >span:nth-child(even) {
-            display: inline-block;
-            vertical-align: top;
-            margin-right: 10px;
-          }
-        }
-      }
-      .student-overview-table {
-        width: 100%;
-        margin: 15px 0px;
-
-        tr {
-          border: 1px solid #ccc;
-        }
-      }
-      .about-course {
-        border: 1px solid #666;
-        padding: 10px;
-        >h5 {
-          text-transform: uppercase;
-          font-weight: 600;
-          letter-spacing: 1.5px;
-          font-size: 14px;
-          display: block;
-          margin: 2px 0px 15px;
-          color: #888;
-        }
-        .course-highlight {
-          color: #aaa;
-          font-weight: 600;
-          font-size: 20px;
-          margin-bottom: 5px;
-        }
-      }
-      /*.about-course-heading {
-        display: block;
-        height: 300px;
-        width: 100%;
-        border: 1px solid black;
-        background: #999999;
-        position: relative;
-        color: #fff;
-        text-align: center;
-
-        .heading-text {
-          display: inline-block;
-          position: absolute;
-          top: 50%;
-          left: 50%;
-          transform: translate(-50%, -50%);
-
-          div:not(:first-child) {
-            font-size: 20px;
-          }
-
-          h2 {
-            color: inherit;
-          }
-        }
-      }
-
-      .about-course-details {
-        display: block;
-        min-height: 100px;
-        width: 100%;
-      }*/
+    h5,h3 {
+      color: #2b78e4;
+    }
+    button {
+      font-size: 14px;
+      padding: 7px;
+      margin: 0px;
+      background-color: #2B78E4;
     }
   }
+  .course-status {
+    >h5 {
+      color: #888;
+    }
+    >.row {
+      margin: 10px 0px;
+    }
+    .tabs {
+      width: 100%;
+      margin: 0em 0em 0.5em;
+      border-bottom: 1px solid #CCC;
+
+      .tab-title {
+        width: 40%;
+        background-color: #DEDEDE;
+        margin-left: 1em;
+        position: relative;
+        top: 1px;
+        text-transform: uppercase;
+
+        &.active {
+          background-color: #fff;
+          border: 1px solid #CCC;
+          border-bottom: 0px;
+        }
+      }
+    }
+  }
+  .course-section {
+    border: 1px solid #ccc;
+    padding: 10px;
+    box-shadow: 1px 1px 1px rgba(0, 0, 0,0.5);
+    margin: 40px 0px;
+    position: relative;
+
+    >.row {
+      margin: 20px 0px;
+    }
+
+    .course-section-heading {
+      text-transform: uppercase;
+      font-weight: 600;
+      letter-spacing: 1.5px;
+      font-size: 14px;
+      display: block;
+      margin: 2px 0px 15px;
+      color: #888;
+    }
+
+    .course-section-icon {
+      position: absolute;
+      font-size: 40px;
+      top: -35px;
+      right: 5px;
+      color: #aaa;
+      background: #fff;
+    }
+  }
+  .course-points-breakup {
+
+  }
+  .course-interactions {
+
+  }
+  .course-gallery-uploads {
+
+  }
+  .course-quiz-perf {
+
+  }
+  .course-notes{
+
+  }
+  .course-warning{
+    background-color: #fffdd7;
+    >h5 {
+      color: #c09100;
+    }
+    i {
+      padding: 10px;
+      margin-right: 5px;
+      color: #c09100;
+    }
+    a {
+      text-decoration: underline;
+    }
+  }
+  .course-students-data {
+    margin: 20px 0px;
+
+    .students-table-legends {
+      >span:nth-child(odd) {
+        margin: 0px 10px;
+      }
+      >span:nth-child(even) {
+        display: inline-block;
+        vertical-align: top;
+        margin-right: 10px;
+      }
+    }
+  }
+  .student-overview-table {
+    width: 100%;
+    margin: 15px 0px;
+
+    tr {
+      border: 1px solid #ccc;
+    }
+  }
+  .about-course {
+    border: 1px solid #666;
+    padding: 10px;
+    >h5 {
+      text-transform: uppercase;
+      font-weight: 600;
+      letter-spacing: 1.5px;
+      font-size: 14px;
+      display: block;
+      margin: 2px 0px 15px;
+      color: #888;
+    }
+    .course-highlight {
+      color: #aaa;
+      font-weight: 600;
+      font-size: 20px;
+      margin-bottom: 5px;
+    }
+  }
+  /*.about-course-heading {
+    display: block;
+    height: 300px;
+    width: 100%;
+    border: 1px solid black;
+    background: #999999;
+    position: relative;
+    color: #fff;
+    text-align: center;
+
+    .heading-text {
+      display: inline-block;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+
+      div:not(:first-child) {
+        font-size: 20px;
+      }
+
+      h2 {
+        color: inherit;
+      }
+    }
+  }
+
+  .about-course-details {
+    display: block;
+    min-height: 100px;
+    width: 100%;
+  }*/
 }
 
 .course-dashboard {
